<?xml version="1.0"?>
<package format="2">
  <name>earth_rover_piksi</name>
  <version>1.8.2</version>
  <description>Meta-package for the earth_rover_piksi repository.</description>

  <maintainer email="andres@earthrover.cc">Andres Palomino</maintainer>
  <maintainer email="ricard@earthrover.cc">Ricard Pardell</maintainer>

  <url>http://wiki.ros.org/earth_rover_piksi</url>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>piksi_multi_rtk</exec_depend>
  <exec_depend>piksi_rtk_msgs</exec_depend>

  <export>
    <metapackage />
  </export>
</package>
