<?xml version="1.0"?>
<package format="2">
  <name>piksi_multi_rtk</name>
  <version>1.8.2</version>
  <description>
    ROS driver for Piksi Multi RTK GPS Receiver.
  </description>

  <maintainer email="andres@earthrover.cc">Andres Palomino</maintainer>
  <maintainer email="ricard@earthrover.cc">Ricard Pardell</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>piksi_rtk_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>roslib</depend>
  <depend>rospy</depend>

</package>
